deploy-pp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feezless-pp
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: feezless-pp
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: feezless-pp
    spec:
      containers:
        - name: feezless-pp
          image: gmccontainerregistry.azurecr.io/gomycode/feezless-pp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
      imagePullSecrets:
        - name: gomycode-azure-registry-creds

---
apiVersion: v1
kind: Service
metadata:
  name: feezless-pp
  labels:
    app: feezless-pp
spec:
  ports:
    - name: http
      port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app: feezless-pp
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: feezless-pp
spec:
  tls:
    - hosts:
        - feezless-pp-api.eng.gomycode.co
      secretName: default-tls-gomycode-co
  rules:
    - host: feezless-pp-api.eng.gomycode.co
      http:
        paths:
          - path: /
            backend:
              serviceName: feezless-pp
              servicePort: 3003
