deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feezless
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: feezless
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: feezless
    spec:
      containers:
        - name: feezless
          image: gmccontainerregistry.azurecr.io/gomycode/feezless:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: gomycode-azure-registry-creds

---
apiVersion: v1
kind: Service
metadata:
  name: feezless
  labels:
    app: feezless
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: feezless
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: feezless
spec:
  tls:
    - hosts:
        - feezless-api.eng.gomycode.co
      secretName: default-tls-gomycode-co
  rules:
    - host: feezless-api.eng.gomycode.co
      http:
        paths:
          - path: /
            backend:
              serviceName: feezless
              servicePort: 3001
